--- a/template/Makefile.am
+++ b/template/Makefile.am
@@ -1,12 +1,13 @@
 
 templatedir = $(datadir)/codefox
-template_DATA = codefox.ui codefox-new-project.ui codefox-create-file.ui codefox-project-settings.ui codefox-editor-settings.ui
+template_DATA = codefox.ui codefox-new-project.ui codefox-create-file.ui codefox-project-settings.ui codefox-editor-settings.ui codefox-fun-tip.ui.in
 
 EXTRA_DIST = codefox.ui.in \
 	codefox-new-project.ui.in \
 	codefox-create-file.ui.in \
 	codefox-project-settings.ui.in \
-	codefox-editor-settings.ui.in
+	codefox-editor-settings.ui.in \
+	codefox-fun-tip.ui.in
 
 
 
