--- a/template/codefox-create-file.ui.in
+++ b/template/codefox-create-file.ui.in
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.20.0 -->
 <interface>
-  <!-- interface-requires gtk+ 3.0 -->
+  <requires lib="gtk+" version="3.0"/>
   <object class="GtkDialog" id="toplevel">
     <property name="can_focus">False</property>
     <property name="border_width">5</property>
@@ -59,7 +60,7 @@
               <object class="GtkLabel" id="label1">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes">File name:     </property>
+                <property name="label" translatable="yes">File name:</property>
               </object>
               <packing>
                 <property name="expand">False</property>
