--- a/template/codefox-project-settings.ui.in
+++ b/template/codefox-project-settings.ui.in
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.20.0 -->
 <interface>
-  <!-- interface-requires gtk+ 3.0 -->
+  <requires lib="gtk+" version="3.0"/>
   <object class="GtkDialog" id="toplevel">
     <property name="can_focus">False</property>
     <property name="border_width">5</property>
@@ -62,7 +63,7 @@
                   <object class="GtkLabel" id="label1">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="label" translatable="yes">Libraries:    </property>
+                    <property name="label" translatable="yes">Libraries:</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -99,7 +100,7 @@
                   <object class="GtkLabel" id="label2">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="label" translatable="yes">Compiler options:    </property>
+                    <property name="label" translatable="yes">Compiler options:</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -132,8 +133,8 @@
               <object class="GtkLabel" id="label3">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="xalign">0</property>
                 <property name="label" translatable="yes">Note: Separate each item with space(s).</property>
+                <property name="xalign">0</property>
                 <attributes>
                   <attribute name="foreground" value="#20204a4a8787"/>
                 </attributes>
