--- a/data/codefox.desktop.in
+++ b/data/codefox.desktop.in
@@ -2,7 +2,7 @@
 Encoding=UTF-8
 _Name=Codefox
 _GenericName=Integrated Development Environment
-_Comment=GNMOE Codefox C/C++ IDE
+_Comment=GNOME Codefox C/C++ IDE
 Exec=codefox %F
 Terminal=false
 Type=Application
