--- a/template/Makefile.in
+++ b/template/Makefile.in
@@ -336,7 +336,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 templatedir = $(datadir)/codefox
-template_DATA = codefox.ui codefox-new-project.ui codefox-create-file.ui codefox-project-settings.ui codefox-editor-settings.ui codefox-fun-tip.ui.in
+template_DATA = codefox.ui codefox-new-project.ui codefox-create-file.ui codefox-project-settings.ui codefox-editor-settings.ui codefox-fun-tip.ui
 EXTRA_DIST = codefox.ui.in \
 	codefox-new-project.ui.in \
 	codefox-create-file.ui.in \
