--- a/template/codefox-editor-settings.ui.in
+++ b/template/codefox-editor-settings.ui.in
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.20.0 -->
 <interface>
-  <!-- interface-requires gtk+ 3.0 -->
+  <requires lib="gtk+" version="3.20"/>
   <object class="GtkWindow" id="toplevel">
     <property name="width_request">250</property>
     <property name="height_request">200</property>
@@ -27,8 +28,9 @@
               <object class="GtkLabel" id="label1">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="xalign">0</property>
                 <property name="label" translatable="yes">Code Font:</property>
+                <property name="single_line_mode">True</property>
+                <property name="xalign">0</property>
               </object>
               <packing>
                 <property name="expand">True</property>
@@ -43,7 +45,6 @@
                 <property name="receives_default">True</property>
                 <property name="font">Sans 12</property>
                 <property name="preview_text"/>
-                <property name="font_name">Monospace 10</property>
                 <property name="use_font">True</property>
                 <property name="use_size">True</property>
               </object>
@@ -69,8 +70,8 @@
               <object class="GtkLabel" id="label2">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="label" translatable="yes">Keyword Color:</property>
                 <property name="xalign">0</property>
-                <property name="label" translatable="yes">Keyword Color: </property>
               </object>
               <packing>
                 <property name="expand">True</property>
@@ -108,8 +109,8 @@
               <object class="GtkLabel" id="label4">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="xalign">0</property>
                 <property name="label" translatable="yes">String Color:</property>
+                <property name="xalign">0</property>
               </object>
               <packing>
                 <property name="expand">True</property>
@@ -147,8 +148,8 @@
               <object class="GtkLabel" id="label3">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="label" translatable="yes">Constant Color:</property>
                 <property name="xalign">0</property>
-                <property name="label" translatable="yes">Constant Color: </property>
               </object>
               <packing>
                 <property name="expand">True</property>
@@ -186,8 +187,8 @@
               <object class="GtkLabel" id="label6">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="xalign">0</property>
                 <property name="label" translatable="yes">Comment Color:</property>
+                <property name="xalign">0</property>
               </object>
               <packing>
                 <property name="expand">True</property>
@@ -225,8 +226,8 @@
               <object class="GtkLabel" id="label5">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="label" translatable="yes">Preprocessor Color:</property>
                 <property name="xalign">0</property>
-                <property name="label" translatable="yes">Preprocessor Color: </property>
               </object>
               <packing>
                 <property name="expand">True</property>
