--- a/template/codefox.ui.in
+++ b/template/codefox.ui.in
@@ -658,17 +658,17 @@
               </packing>
             </child>
             <child>
-              <object class="GtkPaned" id="vpaned1">
+              <object class="GtkPaned" id="verpaned">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="orientation">vertical</property>
+                <property name="position">300</property>
+                <property name="position_set">True</property>
                 <child>
                   <object class="GtkNotebook" id="codenotebook">
-                    <property name="height_request">200</property>
+                    <property name="height_request">150</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="hexpand">True</property>
-                    <property name="vexpand">True</property>
                     <property name="scrollable">True</property>
                     <property name="enable_popup">True</property>
                     <child>
@@ -692,7 +692,7 @@
                   </object>
                   <packing>
                     <property name="resize">True</property>
-                    <property name="shrink">True</property>
+                    <property name="shrink">False</property>
                   </packing>
                 </child>
                 <child>
