--- a/configure.in
+++ b/configure.in
@@ -70,6 +70,10 @@ AC_FUNC_FORK
 AC_FUNC_MALLOC
 AC_CHECK_FUNCS([atexit dup2 memset strchr strdup strrchr strstr])
 
+# enable debug or not                                                         
+AC_ARG_ENABLE(debug, AS_HELP_STRING([--enable-debug], [enable DEBUG mode(default=no)]),[], [enable_debug=no])
+AS_IF([test "x$enable_debug" = "xyes"], [CFLAGS="-g2 -O0 -DDEBUG -Wall"], 
+	  [test "x$enable_debug" = "xno"], [CFLAGS="-O2 -Wall"], [])
 
 AC_CONFIG_FILES([Makefile
 src/Makefile
