--- a/template/codefox.ui.in
+++ b/template/codefox.ui.in
@@ -427,7 +427,7 @@
               <object class="GtkToolButton" id="openprojectbutton">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="tooltip_text" translatable="yes">Open a exist project</property>
+                <property name="tooltip_text" translatable="yes">Open an existing project</property>
                 <property name="icon_name">document-open</property>
                 <accelerator key="o" signal="clicked" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
               </object>
