--- a/icons/Makefile.in
+++ b/icons/Makefile.in
@@ -371,9 +371,9 @@ $(srcdir)/Makefile.in: @MAINTAINER_MODE_TRUE@ $(srcdir)/Makefile.am  $(am__confi
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign icons/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu icons/Makefile'; \
 	$(am__cd) $(top_srcdir) && \
-	  $(AUTOMAKE) --foreign icons/Makefile
+	  $(AUTOMAKE) --gnu icons/Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
 	  *config.status*) \
