--- a/template/Makefile.in
+++ b/template/Makefile.in
@@ -356,9 +356,9 @@ $(srcdir)/Makefile.in: @MAINTAINER_MODE_TRUE@ $(srcdir)/Makefile.am  $(am__confi
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign template/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu template/Makefile'; \
 	$(am__cd) $(top_srcdir) && \
-	  $(AUTOMAKE) --foreign template/Makefile
+	  $(AUTOMAKE) --gnu template/Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
 	  *config.status*) \
